user-management/src/main/java/com/example/error/ErrorResponse.java
package com.example.error;

import java.io.Serializable;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.ToString;

@Data
@ToString
@NoArgsConstructor
@AllArgsConstructor
public class ErrorResponse implements Serializable {

	private static final long serialVersionUID = 1L;

	Integer status;

	String errorCode;

	String errorMessage;
}
	